# Ball-Fountain

./: BounceOffTheGround_unitTest.cpp  ButtonActions.cpp  CMakeLists.txt  CalculateDistanceBetweenTwoVectors_unitTest.cpp  ChangeBallVelocityIfCollisionOccurs_unitTest.cpp  ChangePosition_UnitTest.cpp  ChangeVelocityDueToGravity_unitTest.cpp  ChangeVelocityIfBallHitsTheGround_unitTest.cpp  CheckIfBallHasHitAnotherBall.cpp  CheckIfBallHasHitTheGround_unitTest.cpp  DotProductOfTwoVectors_unitTest.cpp  Physics.cpp  Physics.h  SphereColorUpdateCallback.cpp  SphereColorUpdateCallback.h  SpherePhysicsUpdateCallback.cpp  SpherePhysicsUpdateCallback.h  accelerateDueToGravity_unitTest.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowform.ui  osgwidget.cpp  osgwidget.h  osgwidgetObjectCreation.cpp  physics.cpp  physics.h  physics_unitTest.cpp
